# codewars-train

./: 4-kyu-Hamming-Numbers.c  4-kyu-Human-readable-duration-format.c  4-kyu-Snail.c  4-kyu-Sudoku-Solution-Validator.c  6-kyu-Roman-Numerals-Encoder.c  CMakeLists.txt
