cmake_minimum_required(VERSION 3.20)
project(codewars C)

set(CMAKE_C_STANDARD 99)

add_executable(roman 6-kyu-Roman-Numerals-Encoder.c)
add_executable(snail 4-kyu-Snail.c)
add_executable(readable-time 4-kyu-Human-readable-duration-format.c)
add_executable(sudoku 4-kyu-Sudoku-Solution-Validator.c)
add_executable(hamming 4-kyu-Hamming-Numbers.c)